# master-patient-index-rust-crate

./: .env.example  .env.production.example  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.test  README.md  ai-progress.md  diesel.toml  docker-compose.test.yml  docker-compose.yml  index.md  plan.md  task-1.md  task-10.md  task-11.md  task-13.md  task-2.md  task-4.md  task-5.md  task-6.md  task-9.md  tasks.md  todo.md
.github/workflows/: deploy.yml.example  docker.yml  quality.yml  security.yml  test.yml
AGENTS/: architecture.md  index.md  matching.md  models.md  restful.md  testing.md
AGENTS/share/: auditability.md  availability.md  match-search-merge.md  observability.md  overview.md  privacy.md  restful.md  technology.md
assets/static/: 404.html
assets/static/css/: app.css
assets/views/: layout.html
assets/views/pages/: home.html
assets/views/pages/patients/: delete.html  edit.html  index.html  match.html  merge.html  new.html  show.html
assets/views/partials/: _alert.html  _nav.html  _patient_rows.html
benches/: matching_bench.rs  search_bench.rs  validation_bench.rs
config/: development.yaml  production.yaml  test.yaml
docs/superpowers/plans/: 2026-03-22-fix-compile-tests-docs.md
src/: app.rs  error.rs  lib.rs
src/api/: mod.rs
src/api/fhir/: handlers.rs  mod.rs  resources.rs
src/api/grpc/: mod.rs
src/api/rest/: handlers.rs  mod.rs  state.rs
src/config/: mod.rs
src/db/: audit.rs  mod.rs  models.rs  repositories.rs  schema.rs
src/matching/: algorithms.rs  mod.rs  phonetic.rs  scoring.rs
src/models/: consent.rs  document.rs  emergency_contact.rs  identifier.rs  merge.rs  mod.rs  organization.rs  patient.rs  review_queue.rs
src/observability/: mod.rs
src/privacy/: mod.rs
src/search/: index.rs  mod.rs
src/streaming/: mod.rs  producer.rs
src/validation/: mod.rs
src/web/: handlers.rs  mod.rs
tests/: api_integration_test.rs
tests/common/: mod.rs
