[package]
name = "master-patient-index"
version = "0.2.0"
edition = "2024"
authors = ["joel@joelparkerhenderson.com"]
description = "Master Patient Index (MPI) - A healthcare patient identification and matching system"
license = "MIT OR Apache-2.0 OR BSD-3-Clause OR GPL-2.0-only OR GPL-3.0-only"
repository = "https://github.com/master-patient-index/master-patient-index-rust-crate"
keywords = ["healthcare", "mpi", "patient-matching", "fhir", "hl7"]
categories = ["science", "database"]

[dependencies]
# Async Runtime
tokio = { version = "1.49", features = ["full"] }

# Web Framework & HTTP
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
hyper = { version = "1.8", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (PostgreSQL ORM)
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-json"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Web framework (full-stack, mounts existing Axum router via after_routes hook)
# Pinned to 0.13 because 0.14+ pulls axum 0.8 which conflicts with our axum 0.7.
loco-rs = "0.13"

# Templating
tera = "1.20"

# Search Engine
tantivy = "0.22"

# OpenAPI Documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }

# OpenTelemetry (Observability)
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"
async-trait = "0.1"

# Fuzzy Matching & String Processing
strsim = "0.11"
fuzzy-matcher = "0.3"

# Security
argon2 = "0.5"

[dev-dependencies]
# Testing
assertables = "9.8"
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3.24"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bin]]
name = "master-patient-index"
path = "src/bin/master_patient_index.rs"

[[bench]]
name = "matching_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
